# docs/swagger.json
@@ -76,7 +76,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Location of the created annonce",
+                        "description": "annonce created successfully",
                         "schema": {
                             "type": "string"
                         }
@@ -177,7 +177,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Updated annonce",
+                        "description": "annonce updated successfully",
                         "schema": {
                             "$ref": "#/definitions/models.Annonce"
                         }
@@ -460,6 +460,92 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2021-01-01",
+                        "description": "Birth Date",
+                        "name": "BirthDate",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sexe",
+                        "name": "sexe",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2022-06-15",
+                        "description": "Last Vaccine Date",
+                        "name": "LastVaccine",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Last Vaccine Name",
+                        "name": "LastVaccineName",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Color",
+                        "name": "Color",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Behavior",
+                        "name": "Behavior",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "true",
+                            "false"
+                        ],
+                        "type": "string",
+                        "description": "Sterilized",
+                        "name": "Sterilized",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Race",
+                        "name": "Race",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Description",
+                        "name": "Description",
+                        "in": "formData"
+                    },
+                    {
+                        "enum": [
+                            "true",
+                            "false"
+                        ],
+                        "type": "string",
+                        "description": "Reserved",
+                        "name": "Reserved",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Annonce ID",
+                        "name": "AnnonceID",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "type": "file",
                         "description": "Image",
                         "name": "uploaded_file",
@@ -469,7 +555,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created cat",
+                        "description": "cat created\tsuccessfully",
                         "schema": {
                             "$ref": "#/definitions/models.Cats"
                         }
@@ -529,6 +615,155 @@
                     },
                     "500": {
                         "description": "error fetching cat",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update the details of an existing cat",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cats"
+                ],
+                "summary": "Update cat",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the cat to update",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Name of the cat",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2021-01-01",
+                        "description": "Birth date of the cat",
+                        "name": "BirthDate",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sex of the cat",
+                        "name": "sexe",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2022-06-15",
+                        "description": "Last vaccine date of the cat",
+                        "name": "LastVaccine",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Name of the last vaccine administered",
+                        "name": "LastVaccineName",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Color of the cat",
+                        "name": "Color",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Behavior of the cat",
+                        "name": "Behavior",
+                        "in": "formData"
+                    },
+                    {
+                        "enum": [
+                            "true",
+                            "false"
+                        ],
+                        "type": "string",
+                        "description": "Whether the cat is sterilized",
+                        "name": "Sterilized",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Race of the cat",
+                        "name": "Race",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Description of the cat",
+                        "name": "Description",
+                        "in": "formData"
+                    },
+                    {
+                        "enum": [
+                            "true",
+                            "false"
+                        ],
+                        "type": "string",
+                        "description": "Whether the cat is reserved",
+                        "name": "Reserved",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of the annonce associated with the cat",
+                        "name": "AnnonceID",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Image of the cat",
+                        "name": "uploaded_file",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Cat updated successfully",
+                        "schema": {
+                            "$ref": "#/definitions/models.Cats"
+                        }
+                    },
+                    "400": {
+                        "description": "Missing or invalid fields in the request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "User is not authorized to update this cat",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Cat not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "type": "string"
                         }
@@ -826,7 +1061,7 @@
             "type": "object",
             "properties": {
                 "annonceID": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "behavior": {
                     "type": "string"
@@ -870,7 +1105,7 @@
                 "reserved": {
                     "type": "boolean"
                 },
-                "sex": {
+                "sexe": {
                     "type": "string"
                 },
                 "sterilized": {
